added logic for week frame